[project]
name = "universaltoolkit"
description = "A comprehensive toolkit based on ComfyUI, providing image, mask, audio, and tools nodes, fully modular and v3 compatible."
version = "1.4.1"
license = {file = "LICENSE"}
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "Pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "librosa>=0.8.0",
    "torchaudio>=1.9.0",
    "soundfile>=0.10.0",
    "scipy>=1.7.0",
    "color-matcher",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "tqdm>=4.60.0"
]
requires-python = ">=3.8"
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA"
]

[project.urls]
Repository = "https://github.com/whmc76/ComfyUI-UniversalToolkit"
Documentation = "https://github.com/whmc76/ComfyUI-UniversalToolkit/wiki"
"Bug Tracker" = "https://github.com/whmc76/ComfyUI-UniversalToolkit/issues"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "whmc76"
DisplayName = "ComfyUI-UniversalToolkit"
Icon = "https://raw.githubusercontent.com/whmc76/ComfyUI-UniversalToolkit/main/assets/icon.png"
Banner = "https://raw.githubusercontent.com/whmc76/ComfyUI-UniversalToolkit/main/assets/banner.png"
requires-comfyui = ">=1.0.0"
includes = []
